--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_NODE_ENV=development
-VITE_BASE_URL=http://localhost:4000/api
+VITE_BASE_URL=https://car-wash-booking-system-ten.vercel.app/api
