--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
